--- a/Harry Potter Unreleased Movies/src/index.css
+++ b/Harry Potter Unreleased Movies/src/index.css
@@ -4,8 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: black;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -66,4 +65,22 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.movie-item-wrapper {
+  position: relative;
+}
+
+.homePageImages {
+  width: 60vw;
+  /* Add any other image styling here */
+}
+
+.homePageTitlesOnImage {
+  position: absolute;
+  top: 10px; /* Adjust the top position as needed */
+  left: 10px; /* Adjust the left position as needed */
+  background-color: none; /* Add a background color for better readability */
+  padding: 5px; /* Add padding to the title */
+  color: gold;
 }
