--- a/Harry Potter Unreleased Movies/src/index.css
+++ b/Harry Potter Unreleased Movies/src/index.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: 'Harry P';
+  src: url('/src/assets/HARRYP__.TTF') format('truetype');
+}
 :root {
   font-family: Harry P;
   line-height: 1.5;
@@ -28,6 +32,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: black;
 }
 
 h1 {
